--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "spcoin-common"]
 	path = spcoin-common
 	url = git@github.com:sponsorCoinAdmin/spcoin-common
-[submodule "spcoin-back-end"]
-	path = spcoin-back-end
-	url = git@github.com:sponsorCoinAdmin/spcoin-back-end
 [submodule "spcoin-front-end"]
 	path = spcoin-front-end
 	url = git@github.com:sponsorCoinAdmin/spcoin-front-end
+[submodule "spcoin-weth-module-cjs"]
+	path = spcoin-weth-module-cjs
+	url = git@github.com:sponsorCoinAdmin/spcoin-weth-module-cjs.git
