--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "spcoin-common"]
 	path = spcoin-common
 	url = git@github.com:sponsorCoinAdmin/spcoin-common
-[submodule "node_modules-dev"]
-	path = node_modules-dev
-	url = git@github.com:sponsorCoinAdmin/node_modules-dev.git
+[submodule "spcoin-back-end"]
+	path = spcoin-back-end
+	url = git@github.com:sponsorCoinAdmin/spcoin-back-end.git
